ec2.tf
resource "aws_instance" "RHEL_ec2" {
  ami                  = "ami-0583d8c7a9c35822c"
  instance_type        = "t2.micro"
  subnet_id            = aws_subnet.Sub2.id
  key_name             = aws_key_pair.key_pair.key_name
  security_groups      = ["${aws_security_group.ssh-security-group.id}"]
  iam_instance_profile = aws_iam_instance_profile.Logs2131_instance_profile.name

  root_block_device {
    volume_size = 20
  }

  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              yum install -y httpd
              service httpd start
              chkconfig httpd on
              EOF

  tags = {
    Name = "RHEL-coalfire_ec2"
  }
}
